# Energy-Computing

./: README.md  main.py  pyproject.toml  requirements.txt
derivatio-energy/: railway.toml  requirements.txt
derivatio-energy/app/: config.py  main.py
derivatio-energy/app/api/routes/: entsoe.py  scheduler.py  simulation.py  tariffs.py  zaptec.py
derivatio-energy/app/core/: cost_model.py  optimizer.py  peak_shaving.py
derivatio-energy/app/models/: property.py  simulation.py  tariff.py
derivatio-energy/app/services/: dispatcher.py  entsoe.py  scheduler.py  simulation_service.py  tariff_service.py  zaptec.py
derivatio-energy/supabase/migrations/: 001_initial.sql  002_tariffs.sql  003_simulations.sql  004_consumption.sql
derivatio-energy/supabase/seeds/: tariffs_ellevio.sql  tariffs_eon.sql  tariffs_vattenfall.sql
derivatio-energy/tests/: test_entsoe.py
